CHANGES.txt - 2007-07-16
------------------------

CHANGES IN CUPS V1.3??

	- The USB backend could deadlock on Mac OS X while performing
	  a side-channel command.
	- The scheduler did not prevent remote queues from being
	  shared/published.
	- The scheduler did not remove the temporary request file on
	  authentication errors.
	- ppdLocalizeIPPReason() did not handle "scheme:" schemes or
	  "file" URLs.
	- ppdLocalizeIPPReason() was not exported on Mac OS X.


CHANGES IN CUPS V1.3b1

	- Copyright updates - CUPS is now owned by Apple Inc.
	- Documentation updates (STR #1775, STR #2027, STR #2130,
	  STR #2131, STR #2263, STR #2356, STR #2397)
	- Added new cupsfilter utility (STR #1734)
	- Added new job-printer-state-message and
	  job-printer-state-reasons attributes to jobs (STR #2418)
	- Added LDAP+SSL support (STR #1967)
	- CUPS now supports authentication via peer credentials
	  over domain sockets (STR #2242, STR #2277)
	- The CUPS sample driver PPDs are now generated by the PPD
	  compiler and include all of the localized languages by
	  default (STR #2164)
	- You can now specify "AuthType Default" in the cupsd.conf
	  file to use the default authentication defined by the
	  DefaultAuthType directive.
	- The SNMP backend no longer adds a default Address line
	  when none is specified in the snmp.conf file; this allows
	  the backend to be easily disabled as needed (STR #2434)
	- Added a new cupsctl command for doing basic changes to
	  the cupsd.conf file (STR #1777)
	- Added a new ppdLocalizeIPPReason() function to get the
	  localized text/URI for a given IPP reason keyword for a
	  driver.
	- Removed the deskjet2.ppd driver, as it only worked with
	  a very small subset of HP DeskJet printers and was
	  confusing to users.  The rastertohp driver still
	  supports the deskjet2.ppd options for existing queues.
	- The scheduler did not add a trailing banner page if a
	  client did not specify the last document in a job (STR
	  #1711)